# key-value

./: .gitignore  README.md  hello.c  temp.c
C++/: assignement.c  assignement.cpp  dice.cpp
C++/Ml/: Layer.cpp  Neuron.cpp  Neuron.hpp  a.out  concept.cpp  main.cpp
C++/Ml/include/: Layer.hpp  Neuron.hpp
C++/Ml/neural_network/: CMakeLists.txt  Layer.cpp  Matrix.cpp  Neuron.cpp
C++/Ml/neural_network/include/: Layer.hpp  Matrix.hpp  Neuron.hpp
C++/networking/: tcp_server.cpp  udp.cpp  udp_receive.cpp
C/build-up/: a.out  binary.c  calcolator.c  duplicates.c  factorial.c  fibonacci.c  hello.c  pancake_sort.c  rotate.c
C/examples/assembly/: first.c
C/examples/build-up/: max_min.c  pointer_logic.c  reverse_list.c
C/projects/clock/: a.out  main.c
C/propedeutics/: a.out  hello.c
C/ram-position/: NOTES.md  a.out  program.c  table_gen.py
Rust/snippets/: a.out  primo.c
Rust/uni/: july.md
VHDL/uni/: memory.vhd
assembly/: hello.asm
assembly-pong/: Pong.asm
assembly/RISC-V/: instructions_type.md
assembly/build-up/: sum.asm
assembly/snippets/: hello  hello.asm  rax.c  swap.c
bash/: NOTES.md  temp.md
bash/snippets/: count_rename.sh  rename.sh
gioele/: Cargo.toml
leetcode/: 125_palindrome.py  1_two_sum.md  242_anagram.md  242_anagram.txt  6_zig.md  6_zig.py  9_palindrome.py  a.out  intro.txt  score.c  valid_parentheses.py
mondo/: Cargo.toml
rust/build_up/: Cargo.toml
rust/ciao/: Cargo.toml
rust/paper_1/: Cargo.toml
rust/paper_2/: Cargo.toml
rust/paper_3/: Cargo.toml
rust/port_sniffer/: Cargo.toml
rust/sono/: Cargo.toml
(+124 files in other folders)
